--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@ body {
 }
 
 h2 {
-  margin-bottom: 1rem;
+  margin-bottom: 2rem;
 }
 
 form {
@@ -26,12 +26,26 @@ input {
   border: 1px solid #ccc;
   padding: 0 20px;
   font-size: 16px;
-  margin-bottom: 20px;
+  margin-bottom: 8px;
+}
+
+.error-input {
+  border: 2px solid red;
+}
+
+.error-label {
+  color: red;
 }
 
 label {
   font-size: 16px;
-  margin-bottom: 10px;
+  margin-bottom: 6px;
+}
+
+section {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 16px;
 }
 
 button {
@@ -42,4 +56,9 @@ button {
   font-size: 16px;
   margin-bottom: 20px;
   cursor: pointer;
+}
+
+.error-msg {
+  color: red;
+  font-size: 16px;
 }
