--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,7 @@ form {
   flex-direction: column;
 }
 
+textarea,
 input {
   height: 40px;
   border-radius: 5px;
@@ -27,6 +28,13 @@ input {
   padding: 0 20px;
   font-size: 16px;
   margin-bottom: 8px;
+  font-family: inherit;
+}
+
+textarea {
+  height: 100px;
+  padding-top: 8px;
+  resize: none;
 }
 
 .error-input {
